fix: 디펜던시 원복, 로그 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,7 @@ spring:
     user:
       name: ${ADMIN_USERNAME}
       password: ${ADMIN_PASSWORD}
+logging:
+  file:
+    name: admin.log
+    path: /home/ubuntu/admin/log
