fix: logfile name 삭제

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,5 +7,6 @@ spring:
       password: ${ADMIN_PASSWORD}
 logging:
   file:
-    name: admin.log
     path: /home/ubuntu/admin/log
+  level:
+    root: info
